--- a/samples/sensor/ism330bx/debug.conf
+++ b/samples/sensor/ism330bx/debug.conf
@@ -3,12 +3,13 @@
 #               DEBUG CONFIG                #
 # ==========================================#
 CONFIG_LOG=y
-CONFIG_LOG_BACKEND_RTT=y
+# CONFIG_LOG_BACKEND_RTT=y
 
 # Add debug information to the firmware image
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_THREAD_INFO=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
+
 
 # ISM330BX logging level
 CONFIG_ISM330BX_LOG_LEVEL_DBG=y
