--- a/samples/sensor/ism330bx/prj.conf
+++ b/samples/sensor/ism330bx/prj.conf
@@ -3,7 +3,11 @@ CONFIG_GPIO=y
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_SPI=y
 CONFIG_SENSOR=y
-# CONFIG_ISM330BX_TRIGGER_GLOBAL_THREAD=y // WIP
-# CONFIG_SPI=y
-# CONFIG_SENSOR=y
-# CONFIG_SENSOR_ASYNC_API=y
+
+CONFIG_PM_DEVICE=y
+CONFIG_PM_DEVICE_RUNTIME=y # Requires for setting the ISM driver as suspended
+
+CONFIG_ISM330BX=y
+CONFIG_ISM330BX_TRIGGER_OWN_THREAD=y
+CONFIG_ISM330BX_GYRO_DRDY_TRIGGER=y
+CONFIG_ISM330BX_ENABLE_TEMP=y
