--- a/samples/sensor/ism330bx/debug.conf
+++ b/samples/sensor/ism330bx/debug.conf
@@ -3,7 +3,8 @@
 #               DEBUG CONFIG                #
 # ==========================================#
 CONFIG_LOG=y
-# CONFIG_LOG_BACKEND_RTT=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
 
 # Add debug information to the firmware image
 # CONFIG_DEBUG_INFO=y
