--- a/samples/sensor/ism330bx/prj.conf
+++ b/samples/sensor/ism330bx/prj.conf
@@ -9,5 +9,5 @@ CONFIG_PM_DEVICE_RUNTIME=y # Requires for setting the ISM driver as suspended
 
 CONFIG_ISM330BX=y
 CONFIG_ISM330BX_TRIGGER_OWN_THREAD=y
-CONFIG_ISM330BX_GYRO_DRDY_TRIGGER=y
+# CONFIG_ISM330BX_GYRO_DRDY_TRIGGER=y
 CONFIG_ISM330BX_ENABLE_TEMP=y
